k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-service

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    
    spec:
      containers:
        - name: auth-service
          image: ticket-auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
