k8s/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service

  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: ticket-event-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
