k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: frontend

  template:
    metadata:
      labels: 
        app: frontend
    
    spec: 
      containers:
        - name: frontend
          image: 861097501014.dkr.ecr.us-east-1.amazonaws.com/ticket-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
