k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service

spec:
  selector:
    app: auth-service
  
  ports:
    - port: 8083
      targetPort: 8083
