k8s/booking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service

spec:
  selector:
    app: booking-service
  
  ports: 
    - port: 8082
      targetPort: 8082
