k8s/event-service-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: event-service

spec:
  selector:
    app: event-service

  ports:
    - port: 8081
      targetPort: 8081
