k8s/frontend-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: frontend-service

spec:
  selector:
    app: frontend
  
  ports:
    - port: 80
      targetPort: 80
