k8s/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: ticket-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8081
          
          - path: /api/booking
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8082

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8083

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
